Feat: 이메일 전송 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//emailSender
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	//thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.thymeleaf:thymeleaf-spring5'
+
 }
 
 tasks.named('test') {
